--- a/HOMEPAGE.html
+++ b/HOMEPAGE.html
@@ -27,6 +27,7 @@
                 <li><a href = "file:///E:/COLLEGE%20PROJECTS/LOOK%20BOOK/Contact.html">Contact</a></li>
             </ul>
         </nav>
+        <p>Hello everyone....................</p>
             <div class = "header-content">
                 <div class = "header-text">
                     <h1>Welcome
