--- a/HOMEPAGE.html
+++ b/HOMEPAGE.html
@@ -38,6 +38,7 @@
                 </div>
             </div>
     </section>
+    <p>helooooo</p>
     <section class = "About">
         <div class = "about-heading">
             <h2>ABOUT WEBSITE</h2>
